# Niv

./: .gitmodules  Cargo.toml  LICENSE  README.md  can.rs  dummy.txt  move.sh  test.c  todo.tx  todo.txt
examples/: brainfrick.glg  brainfrick.niv  brainfrick.nst  calculations.nst  files.niv  hello_window.nst  if_statements.niv  input_and_output.niv  list.niv  pixel.niv  pong.glg  pong.niv  pong.nst  root_scopes.niv  self_contained.glg  square.glg  square.niv  state.niv  str.niv  user_type.niv  variable.niv
examples/flappy_bird/: main.glg  main.nst  project.prj
examples/lib/: math.glg
scripts/: chain.nst  cmd.glg  cmd_better.glg  dummy.glg  example.glg  example_round.glg  files.glg  files.nst  gkl.nst  hate.glg  he.glg  he.nst  ifs.glg  ifs.nst  parsing.nst  pixel.glg  pixel.nst  returns.glg  scopes.glg  square.glg  str_and_list.glg  str_and_list.nst  tries.nst  wind.glg  window.glg
scripts/demom/: demon.prj  helper.nst  main.nst
scripts/multifile/: helper.glg  helper.nst  main.glg  main.nst  project.prj
scripts_old/: example.glg  example_round.glg  he.glg  window.glg
scripts_old/multifile/: helper.glg  main.glg  (+2 more)
src/: args.rs  canvas.rs  commands.rs  expression.rs  macros.rs  main.rs  mainold.rs  mainwithg.rs  ops.rs  state.rs  structs.rs  sturcts.rs  text.rs  types.rs  user_type.rs  util.rs
wiki/: calculations.md  commands.txt  files.md  first_project.md  graphics.md  how_it_works.md  if_statements.md  input_and_output.md  installation.md  lists.md  loops.md  main.md  misc.md  os_events.md  root_scopes.md  string.md  time.md  user_type.md  variables.md
(+22 files in other folders)
