[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snailquote = "0.3.1"
unstringify = "0.1.4"
sdl2 = "0.35.2"
framework = {path =  "vendor/framework", features = ["canvas"]}
sfml = "0.20.0"
